tests/passing/generics_call_id_single_call.tails
func id<T>(x: T) -> unit:
  pass

func tests() -> unit:
  discard id::<int>(123)
