tests/failing/generics_hints_mismatch.tails
func id<T>(x: T) -> unit:
  pass

func tests() -> unit:
  id::<*str>(123)
  id::<int>("hi")
